# workout-app

./: .gitignore  Cargo.toml  Trunk.toml  index.html  stylance.css  stylance.scss  styles.css
.github/workflows/: publish.yml  rust.yml
migrations/2025-02-10-214824_sample_plan/: down.sql  up.sql
src/: app.css  app.rs  card.rs  main.rs  models.rs
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2025-02-10-214824_create_workouts/: up.sql
src-tauri/migrations/2025-03-22-102545_done_date/: down.sql  up.sql
src-tauri/migrations/2025-03-29-113416_achievements/: down.sql  up.sql
src-tauri/migrations/2025-04-06-150929_program_info/: down.sql  up.sql
src-tauri/migrations/2025-04-26-195346_auto-add-workouts/: down.sql  up.sql
src-tauri/src/: day.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/program/: activate_program.rs  auto_add_programs.rs  create_delete_program.rs  get_programs.rs  mod.rs  program_image.rs  share_program.rs
src-tauri/src/utils/: complete_day.rs  db_connect.rs  mod.rs
src-tauri/src/workout/: complete_workout.rs  create_workout.rs  get_workouts.rs  mod.rs
src/achievements/: mod.rs  workout_list.css
src/achievements/program/: program.css  program.rs
src/card/: card.rs  mod.rs
src/create_program/: create_program.css  mod.rs
src/create_program/calendar/: calendar.css  calendar.rs  mod.rs
src/create_program/create_workout/: card.css  create_workout.rs  mod.rs
src/create_program/recents/: card.rs  mod.rs  recents.css  recents.rs
src/current_workout/: current_workout.css  done_day.css  done_day.rs  mod.rs
src/current_workout/card/: card.css  (+2 more)
src/utils/: mod.rs  models.rs  recently_used.rs  video_metadata.rs
src/week/: mod.rs
src/workout_list/: mod.rs  workout_list.css
(+7 files in other folders)
