[package]
name = "workout-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
regex = "1.5"
reqwest = "0.12.12"
bytes = "1.0"
stylance = { version = "0.5.4", features = ["nightly"] }
chrono = { version = "0.4.39", features = ["serde"] }

[workspace]
members = ["src-tauri"]

[package.metadata.stylance]
output_file = "./stylance.css"
extensions = [".scss", ".css", ".module.scss", ".module.css"]