[package]
name = "workout-app-ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
regex = "1.5"
reqwest = { version = "0.12.12", features = ["json"] }
bytes = "1.0"
stylance = { version = "0.5.5", features = ["nightly"] }
chrono = { version = "0.4.40", features = ["serde"] }
web-sys = "0.3.77"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
iso8601-duration = "0.2.0"
linked-hash-map = "0.5.6"

[workspace]
members = ["src-tauri"]

[package.metadata.stylance]
output_file = "./stylance.css"
extensions = [".scss", ".css", ".module.scss", ".module.css"]
